fix spacing on desktop noun vote table

--- a/packages/nouns-webapp/src/components/VoteCard/VoteCard.module.css
+++ b/packages/nouns-webapp/src/components/VoteCard/VoteCard.module.css
@@ -35,7 +35,7 @@
 }
 
 .nounProfilePics {
-  margin-top: 0.5rem;
+  margin-top: 1.5rem;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
